完成收支明细页面连跳
